Fixed alignment CSS

--- a/app/www/modules/buy-browse/buy.css
+++ b/app/www/modules/buy-browse/buy.css
@@ -1,7 +1,7 @@
 .buyContainer{
   color: #6b8665;
   font-family: Helvetica;
-  margin: 13px 10px 10px 10px;
+  margin: 64px 10px 10px 10px;
 }
 
 .buyImg {
